deploy/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app.kubernetes.io/part-of: noc-observability-pipeline
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: noc-observability-pipeline
    environment: monitoring
